payer_agentforce_agents/ProviderClaimsAssistanceAgent/force-app/main/default/objects/Provider_Claims__c/Provider_Claims__c.object-meta.xml
<CustomObject>
    <label>Provider Claim</label>
    <nameField>
        <displayFormat>CLM-{00000}</displayFormat>
        <label>Provider Claims Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>