payer_agentforce_agents/ProviderClaimsAssistanceAgent/force-app/main/default/objects/Provider_Claims__c/fields/Claim_Denail_Reason__c.field-meta.xml
<CustomField>
    <fullName>Claim_Denail_Reason__c</fullName>
    <label>Claim Denail Reason</label>
    <length>254</length>
    <type>Text</type>
</CustomField>