payer_agentforce_agents/ProviderClaimsAssistanceAgent/force-app/main/default/objects/Provider_Claims__c/fields/Claim_Reason__c.field-meta.xml
<CustomField>
    <fullName>Claim_Reason__c</fullName>
    <label>Claim Reason</label>
    <type>TextArea</type>
</CustomField>