payer_agentforce_agents/ProviderClaimsAssistanceAgent/force-app/main/default/objects/Provider_Claims__c/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <label>Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Claim</fullName>
            </value>
            <value>
                <fullName>Professional Claim</fullName>
            </value>
            <value>
                <fullName>Institutional Claim</fullName>
            </value>
            <value>
                <fullName>Pharmacy Claim</fullName>
            </value>
            <value>
                <fullName>Dental Claim</fullName>
            </value>
            <value>
                <fullName>Vision Claim</fullName>
            </value>
            <value>
                <fullName>Behavioral Health Claim</fullName>
            </value>
            <value>
                <fullName>Workers&apos; Compensation Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>