payer_agentforce_agents/ProviderClaimsAssistanceAgent/force-app/main/default/objects/Provider_Claims__c/fields/Estimated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount__c</fullName>
    <label>Estimated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>