payer_agentforce_agents/ProviderClaimsAssistanceAgent/force-app/main/default/objects/Provider_Claims__c/fields/Finalized_Date__c.field-meta.xml
<CustomField>
    <fullName>Finalized_Date__c</fullName>
    <label>Finalized Date</label>
    <type>DateTime</type>
</CustomField>