payer_agentforce_agents/ProviderClaimsAssistanceAgent/force-app/main/default/objects/Provider_Claims__c/fields/Healthcare_Provider__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcare Provider</label>
    <referenceTo>HealthcareProvider</referenceTo>
    <relationshipLabel>Provider Claims</relationshipLabel>
    <relationshipName>Provider_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>