payer_agentforce_agents/ProviderClaimsAssistanceAgent/force-app/main/default/objects/Provider_Claims__c/fields/Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Initiation_Date__c</fullName>
    <label>Initiation Date</label>
    <type>DateTime</type>
</CustomField>